kubernetes-manifests/stutor_azure.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: stutor
    name: stutor-deployment
    namespace: stutor
spec:
    replicas: 1
    selector:
        matchLabels:
            app: stutor
    template:
        metadata:
            labels:
                app: stutor
        spec:
            containers:
            - image: ghcr.io/tobiass1402/stutorserver-dev:master
              imagePullPolicy: Always
              name: stutor
              ports:
                - containerPort: 3000
---
kind: Namespace
apiVersion: v1
metadata:
  name: stutor
---
apiVersion: v1
kind: Service
metadata:
  name: stutor-service
  namespace: stutor
spec:
  type: LoadBalancer
  ports:
    -
      port: 80
      name: http
      protocol: TCP
      targetPort: 3000
  selector:
    app: stutor
