kubernetes-manifests/stutor.yml
#Disclaimer:
#Development environment only
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: stutor
    name: stutor-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: stutor
    template:
        metadata:
            labels:
                app: stutor
        spec:
            containers:
            - image: ghcr.io/tobiass1402/stutorserver-dev:master
              imagePullPolicy: Always
              name: stutor
              ports:
                - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: stutor-service
spec:
  ports:
    -
      port: 3000
      name: http
      protocol: TCP
      targetPort: 3000
  selector:
    app: stutor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stutor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: stutor.xxx.xxx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stutor-service
                port:
                  number: 3000
