kubernetes-manifests/stutor_azure_ingress-ssl.yml
kind: Namespace
apiVersion: v1
metadata:
  name: stutor
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: stutor
    name: stutor-deployment
    namespace: stutor
spec:
    replicas: 1
    selector:
        matchLabels:
            app: stutor
    template:
        metadata:
            labels:
                app: stutor
        spec:
            containers:
            - image: ghcr.io/tobiass1402/stutorserver-prod:master
              imagePullPolicy: Always
              name: stutor
              ports:
                - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: stutor-service
  namespace: stutor
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: stutor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stutor-ingress
  namespace: stutor
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - stutor.seijsener.space
    secretName: tls-secret
  rules:
  - host: stutor.seijsener.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stutor-service
            port:
              number: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stutor-db
  namespace: stutor
spec:
  replicas: 1
  serviceName: stutor-db-service
  selector:
    matchLabels:
      app: stutor-db
  template:
    metadata:
      labels:
        app: stutor-db
    spec:
      containers:
      - image: postgres:14-alpine
        name: stutor-db
        volumeMounts:
          - name: postgres-claim
            mountPath: /var/lib/postgresql/data
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgres-port
          protocol: TCP
      volumes:
        - name: postgres-claim
          persistentVolumeClaim:
            claimName: stutor-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: stutor-db-service
  namespace: stutor
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: stutor-db
